# jira_gen

./: .env  .replit  DEPENDENCIES.md  README.md  api_backend.py  config.py  main.py  next.config.js  package-lock.json  package.json  project_dependencies.md  pyproject.toml  replit.md  updated_template_verification.docx
